--- a/css/resume.css
+++ b/css/resume.css
@@ -135,11 +135,11 @@ section.resume-section .resume-item .resume-date {
 }
 
 .text-primary {
-  color: #000000 !important;
+  color: #BD5D38 !important;
 }
 
 a {
-  color: #000000;
+  color: #BD5D38;
 }
 
 a:hover, a:focus, a:active {
