--- a/css/resume.css
+++ b/css/resume.css
@@ -131,7 +131,7 @@ section.resume-section .resume-item .resume-date {
 }
 
 .bg-primary {
-  background-color: #BD5D38 !important;
+  background-color: #226296 !important;
 }
 
 .text-primary {
@@ -143,5 +143,5 @@ a {
 }
 
 a:hover, a:focus, a:active {
-  color: #824027;
+  color: #adadad;
 }
