--- a/css/resume.css
+++ b/css/resume.css
@@ -135,13 +135,13 @@ section.resume-section .resume-item .resume-date {
 }
 
 .text-primary {
-  color: #BD5D38 !important;
+  color: #226296 !important;
 }
 
 a {
-  color: #BD5D38;
+  color: #226296;
 }
 
 a:hover, a:focus, a:active {
-  color: #adadad;
+  color: #f4f4f4;
 }
